[gd_scene load_steps=3 format=2]

[ext_resource path="res://back_butten.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/option.gd" type="Script" id=2]

[node name="Option" type="Node2D"]
script = ExtResource( 2 )

[node name="butten" type="CanvasLayer" parent="."]
scale = Vector2( 2.5, 2.5 )
transform = Transform2D( 2.5, 0, 0, 2.5, 0, 0 )

[node name="back" parent="butten" instance=ExtResource( 1 )]
margin_left = 1.75647
margin_top = 0.844086
margin_right = 53.7565
margin_bottom = 28.8441

[node name="delete" type="Button" parent="butten"]
anchor_left = -0.012
anchor_right = -0.012
margin_left = 355.84
margin_top = 205.103
margin_right = 468.84
margin_bottom = 225.103
text = "Delete Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes" type="Button" parent="butten/delete"]
visible = false
margin_left = -31.4288
margin_top = 52.7557
margin_right = 2.57117
margin_bottom = 76.7557
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="Button" parent="butten/delete"]
visible = false
margin_left = 78.4898
margin_top = 54.0
margin_right = 113.49
margin_bottom = 78.0
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="butten/delete"]
visible = false
margin_left = 0.316284
margin_top = 28.4185
margin_right = 87.3163
margin_bottom = 42.4185
text = "Are you Sure?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="default" type="Button" parent="butten"]
visible = false
margin_left = 338.242
margin_top = 190.4
margin_right = 451.242
margin_bottom = 210.4
text = "Default Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen" type="CheckBox" parent="butten"]
margin_left = 338.242
margin_top = 164.8
margin_right = 436.242
margin_bottom = 188.8
text = "Full Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crt" type="CheckBox" parent="butten"]
margin_left = 338.242
margin_top = 137.83
margin_right = 436.242
margin_bottom = 161.83
pressed = true
text = "CRT Effect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resolution" type="OptionButton" parent="butten"]
visible = false
margin_left = 338.242
margin_top = 142.4
margin_right = 463.242
margin_bottom = 162.4
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="butten/back" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="butten/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="butten/delete/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="butten/delete/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="butten/default" to="." method="_on_default_pressed"]
[connection signal="toggled" from="butten/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="butten/crt" to="." method="_on_crt_toggled"]
[connection signal="item_selected" from="butten/resolution" to="." method="_on_resolution_item_selected"]
